--- a/don/templates/login-donor.html
+++ b/don/templates/login-donor.html
@@ -13,17 +13,19 @@
               <h2 class="fw-bold mb-2 text-uppercase">Donor Login</h2>
               <p class="text-white-50 mb-5">Please enter your login and password!</p>
 
-              <div class="form-outline form-white mb-4">
-                <input type="email" id="typeEmailX" class="form-control form-control-lg" placeholder="Email" />
-              </div>
+              <form method="post" method="post" novalidate>
+                {% csrf_token %}
+                {% for i in form %}
+                    <div class ="form-group col-sm-12 p-2">
+                         {{i}} <small class="text-danger">{{i.errors|striptags}}</small>
+                    </div>
+                {% endfor %}
+                
 
-              <div class="form-outline form-white mb-4">
-                <input type="password" id="typePasswordX" class="form-control form-control-lg" placeholder="Password" />
-              </div>
+              <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#">Forgot password?</a></p>
 
-              <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
-
-              <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+              <input type="submit" value="Login" class="btn btn-outline-light btn-lg px-5">
+                  </form>
             </div>
 
             <div>
@@ -32,6 +34,17 @@
 
           </div>
         </div>
+        {% if form.non_field_errors %}
+                {% for error in form.non_field_errors %}
+                    <p class="alert alert-danger my-3">{{error}}</p>
+                {% endfor %}
+            {% endif %}
+
+        {% if messages %}
+            {% for message in messages %}
+                <p {% if message.tag %} class="alert alert-{{message.tags}} my-5" {% endif %}>{{message}}</p>
+            {% endfor %}
+        {% endif %}
       </div>
     </div>
   </div>
