--- a/don/templates/changepwd-volunteer.html
+++ b/don/templates/changepwd-volunteer.html
@@ -6,31 +6,29 @@
     <hr>
     <div class="row">
 
-      <div class="col-lg-12 p-2">
-          <div class="form-group">
-              <label>Current Password</label>
-              <input type="password" name="currentpassword" id = "currentpassword" placeholder="Enter Current Password"  class="form-control" required>
-          </div>
-      </div>
- 
+        <form method="post" method="post" novalidate>
+            {% csrf_token %}
+            {% for i in form %}
+                <div class ="form-group col-sm-12 p-2">
+                     {{i}} <small class="text-danger">{{i.errors|striptags}}</small>
+                </div>
+            {% endfor %}
 
-  
-      <div class="col-lg-12 p-2">
-          <div class="form-group">
-              <label>New Password</label>
-              <input type="password" name="newpassword" placeholder="Enter New Password"  class="form-control" required>
-          </div>
-      </div>
-  
-      <div class="col-lg-12 p-2">
-          <div class="form-group">
-              <label>Confirm New Password</label>
-              <input type="password" name="confirmpassword" id="confirmpassword" placeholder="Enter New Password Again"  class="form-control" required>
-          </div>
-      </div>
+            <div class="d-grid gap-2">
+                <input type="submit" value="Submit" class="mt-4 px-3 btn btn-primary">
+            </div>
+        </form>
+    </div>
+        {% if form.non_field_errors %}
+            {% for error in form.non_field_errors %}
+                <p class="alert alert-danger my-3">{{error}}</p>
+            {% endfor %}
+        {% endif %}
 
-  
-  <input type="submit" value="Submit" class="m-2 px-3 btn btn-primary">
+      {% if messages %}
+          {% for message in messages %}
+              <p {% if message.tag %} class="alert alert-{{message.tags}} my-5" {% endif %}>{{message}}</p>
+          {% endfor %}
+      {% endif %}
 </div>
-  </div>
 {% endblock main %}
