--- a/don/templates/donationdetail-donor.html
+++ b/don/templates/donationdetail-donor.html
@@ -11,62 +11,62 @@
           </tr>
           <tr class="align-middle text-center">
             <td><h5>Donor Name</h5></td>
-            <td><h5 class="text-secondary">Nilesh Borate</h5></td>
+            <td><h5 class="text-secondary">{{donation.donor.user.first_name}} {{donation.donor.user.last_name}}</h5></td>
             <td><h5>Donor Contact</h5></td>
-            <td><h5 class="text-secondary">9000000000</h5></td>
+            <td><h5 class="text-secondary">{{donation.donor.contact}}</h5></td>
         </tr>
           <tr class="align-middle text-center">
               <td><h5>Email</h5></td>
-              <td><h5 class="text-secondary">nilesh@gmail.com</h5></td>
+              <td><h5 class="text-secondary">{{donation.donor.user.email}}</h5></td>
               <td><h5>Donor Pic</h5></td>
-              <td><img src="{% static 'images/cloth-donation.jfif' %}" width="80" height="80" /></td>
+              <td><img src="{{donation.donor.userpic.url}}" width="80" height="80" /></td>
           </tr>
         <tr class="align-middle text-center">
               <th colspan="4"><h3>Donation Details</h3></th>
           </tr>
           <tr class="align-middle text-center">
               <td ><h5 >Donation Name</h5></td>
-              <td><h5 class="text-secondary">Other</h5></td>
+              <td><h5 class="text-secondary">{{donation.donationname}}</h5></td>
               <td><h5>Donation Pic</h5></td>
-              <td><img src="{% static 'images/cloth-donation.jfif' %}" width="80" height="80" /></td>
+              <td><img src="{{donation.donationpic.url}}" width="80" height="80" /></td>
           </tr>
           <tr class="align-middle text-center">
               <td><h5 >Collection Location</h5></td>
-              <td><h5 class="text-secondary">Bhosari Pune</h5></td>
+              <td><h5 class="text-secondary">{{donation.collectionloc}}</h5></td>
               <td><h5 >Donation Date</h5></td>
-              <td><h5 class="text-secondary">20/02/2022</h5></td>
+              <td><h5 class="text-secondary">{{donation.donationdate}}</h5></td>
           </tr>
           <tr class="align-middle text-center">
               <td><h5 >Status</h5></td>
               <td>
-                <span class="text-center bg-danger font-weight-bold text-light text-light py-2 rounded-pill px-5"> Accept</span>
+                <span class="text-center bg-danger font-weight-bold text-light text-light py-2 rounded-pill px-5"> {{donation.status}}</span>
               </td>
               <td><h5 >Updation Date</h5></td>
-              <td><h5 class="text-secondary">20/02/2022</h5></td>
+              <td><h5 class="text-secondary">{{donation.updationdate}}</h5></td>
               
           </tr>
           <tr class="align-middle text-center">
               <td><h5 >Admin Remark</h5></td>
               <td colspan="3">
-                <h5 class="text-secondary">Remark-1</h5>
+                <h5 class="text-secondary">{{donation.adminremark|default_if_none:""}}</h5>
               </td>
               
           </tr>
           
           <tr class="align-middle text-center">
             <td><h5 >Donation Area</h5></td>
-            <td colspan="3"> <h5 class="text-secondary">Bhosari</h5></td>
+            <td colspan="3"> <h5 class="text-secondary">{{donation.donationarea.areaname}}</h5></td>
           </tr>
 
           <tr class="align-middle text-center">
             <td><h5 >Volunteer</h5></td>
-            <td colspan="3"> <h5 class="text-secondary">ABC</h5></td>
+            <td colspan="3"> <h5 class="text-secondary">{{donation.volunteer.user.username}}</h5></td>
           </tr>
 
             <tr class="align-middle text-center">
               <td><h5 >Volunteer Remark</h5></td>
               <td colspan="3">
-                <h5 class="text-secondary">Not Updated Yet</h5>
+                <h5 class="text-secondary">{{donation.volunteerremark|default_if_none:""}}</h5>
               </td>
             </tr>
       </tbody>
