--- a/don/templates/index-donor.html
+++ b/don/templates/index-donor.html
@@ -16,7 +16,7 @@
                                     <i class="fa fa-list fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{donationcount}}</h3>
                                 </div>
                             </div>
                         </div>
@@ -39,7 +39,7 @@
                                     <i class="fa fa-snowflake fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{acceptedcount}}</h3>
                                 </div>
                             </div>
                         </div>
@@ -62,7 +62,7 @@
                                     <i class="fa fa-arrows fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{rejectedcount}}</h3>
                                 </div>
                             </div>
                         </div>
@@ -87,7 +87,7 @@
                                     <i class="fa fa-exchange fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{pendingcount}}</h3>
                                 </div>
                             </div>
                         </div>
@@ -111,7 +111,7 @@
                                     <i class="fa-solid fa-bahai fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{deliveredcount}}</h3>
                                 </div>
                             </div>
                         </div>
