--- a/don/templates/login-donor.html
+++ b/don/templates/login-donor.html
@@ -22,7 +22,7 @@
                 {% endfor %}
                 
 
-              <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#">Forgot password?</a></p>
+              <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="{% url "password_reset" %}">Forgot password?</a></p>
 
               <input type="submit" value="Login" class="btn btn-outline-light btn-lg px-5">
                   </form>
