--- a/don/templates/password_reset_confirm.html
+++ b/don/templates/password_reset_confirm.html
@@ -10,8 +10,8 @@
 
             <div class="mb-md-5 mt-md-4 pb-5">
 
-              <h2 class="fw-bold mb-2 text-uppercase">Admin Login</h2>
-              <p class="text-white-50 mb-5">Please enter your login and password!</p>
+              <h2 class="fw-bold mb-2 text-uppercase">Reset Password</h2>
+              <p class="text-white-50 mb-5">Please enter New password</p>
 
               <form method="post" method="post" novalidate>
                 {% csrf_token %}
@@ -21,9 +21,8 @@
                     </div>
                 {% endfor %}
 
-              <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="{% url "password_reset" %}">Forgot password?</a></p>
 
-              <input type="submit" value="Login" class="btn btn-outline-light btn-lg px-5">
+              <input type="submit" value="Submit" class="btn btn-outline-light btn-lg px-5">
                   </form>
             </div>
 
@@ -33,12 +32,6 @@
             {% for error in form.non_field_errors %}
             <p class="alert alert-danger my-3">{{error}}</p>
             {% endfor %}
-          {% endif %}
-
-          {% if messages %}
-              {% for message in messages %}
-                  <p {% if message.tag %} class="alert alert-{{message.tags}} my-5" {% endif %}>{{message}}</p>
-              {% endfor %}
           {% endif %}
       </div>
     </div>
