--- a/don/templates/profile-donor.html
+++ b/don/templates/profile-donor.html
@@ -4,6 +4,8 @@
 <div class="container mt-5 vh-100 table-responsive">
     <h3>My Profile</h3>
     <hr>
+    <form action="" method="post" enctype="multipart/form-data" novalidate>
+        {% csrf_token %}
     <div class="row">
     <div class="col-sm-6 p-2">
         <div class="form-group">
@@ -37,13 +39,13 @@
     <div class="col-sm-6 p-2">
         <div class="form-group">
             <label>User PIC</label>
-            <input type="file" name="userpic" class="form-control">
+            <input type="file" name="userpic" class="form-control" value="{{donor.userpic.url}}">
         </div>
     </div>
 
     <div class="col-sm-6">
         <div class="form-group">
-            <img src = "{% static 'images/avtar1.jpg' %}" width="100" height="100">
+            <img src = "{{donor.userpic.url}}" width="100" height="100">
         </div>
     </div>
 
@@ -54,7 +56,19 @@
         </div>
     </div>
 
-<input type="submit" value="Submit" class="m-2 px-3 btn btn-primary">
+<input type="submit" value="Update" class="m-2 px-3 btn btn-primary">
+{% if form.non_field_errors %}
+{% for error in form.non_field_errors %}
+<p class="alert alert-danger my-3">{{error}}</p>
+{% endfor %}
+{% endif %}
+
 </div>
+</form>
+{% if messages %}
+    {% for message in messages %}
+        <h3 {% if message.tag %} class="alert alert-{{message.tags}} my-5" {% endif %}>{{message}}</h3>
+    {% endfor %}
+{% endif %}
 </div>
 {% endblock main %}
