--- a/don/templates/collection-req.html
+++ b/don/templates/collection-req.html
@@ -15,11 +15,13 @@
         </thead>
         <tbody>
             <tr class="text-center">
-                <th>1</th>
-                <td>Nilesh</td>
-                <td> 02/02/2022</td>
-                <td><a href="{% url 'donationcollection_detail' 2 %}">View Details</a></td>
+              {% for i  in donation %}
+                <th>{{forloop.counter}}</th>
+                <td>{{i.donationname}}</td>
+                <td>{{i.donationdate}}</td>
+                <td><a href="{% url 'donationcollection_detail' i.id %}" class="text-primary">View Details</a></td>
               </tr>
+              {% endfor %}
         </tbody>
     </table>
   </div>
