--- a/don/templates/index-admin.html
+++ b/don/templates/index-admin.html
@@ -16,7 +16,7 @@
                                     <i class="fa fa-list fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{totaldonors}}</h3>
                                 </div>
                             </div>
                         </div>
@@ -39,7 +39,7 @@
                                     <i class="fa fa-snowflake fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{totalvolunteers}}</h3>
                                 </div>
                             </div>
                         </div>
@@ -62,7 +62,7 @@
                                     <i class="fa fa-arrows fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{totaldonations}}</h3>
                                 </div>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                                     <i class="fa fa-exchange fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{totaldonationareas}}</h3>
                                 </div>
                             </div>
                         </div>
@@ -111,7 +111,7 @@
                                     <i class="fa-solid fa-bahai fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{totalpendingdonations}}</h3>
                                 </div>
                             </div>
                         </div>
@@ -134,7 +134,7 @@
                                     <i class="fa-solid fa-bars-progress fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{totalacceptdonations}}</h3>
                                 </div>
                             </div>
                         </div>
@@ -157,7 +157,7 @@
                                     <i class="fa-solid fa-asterisk fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{totaldelivereddonations}}</h3>
                                 </div>
                             </div>
                         </div>
