--- a/don/templates/add-area.html
+++ b/don/templates/add-area.html
@@ -5,21 +5,28 @@
     <h3>Add Area</h3>
     <hr>
     <div class="row">
-      <div class="col-sm-12 p-2">
-          <div class="form-group">
-              <label>Donation Area Name</label>
-              <input type="text" name="areaname"  class="form-control" placeholder="Donation Area">
-          </div>
-      </div>
-
-      <div class="col-sm-12 p-2">
-          <div class="form-group">
-              <label>Description</label>
-              <textarea name="description"  class="form-control" placeholder="Description"></textarea>
-          </div>
-      </div>
-  
-    <input type="submit" value="Submit" class="m-2 px-3 btn btn-primary">
+      <form action="" method="post" novalidate>
+        {% csrf_token %}
+        {% for i in form %}
+        <div class="form-group col-sm-12 p-3">
+            {{i.label_tag}} {{i}} <scmall class="text-danger"> {{i.error|striptags}}</small>
+        </div>
+        {% endfor %}
+        <div class="d-grip gap-2">
+            <input type="submit" value="Submit" class="mt-4 px-3 btn btn-primary">
+        </div>
+      </form>
     </div>
+    {% if form.non_field_errors %}
+    {% for error in form.non_field_errors %}
+    <p class="alert alert-danger my-3">{{error}}</p>
+    {% endfor %}
+    {% endif %}
+    
+    {% if messages %}
+        {% for message in messages %}
+            <h3 {% if message.tag %} class="alert alert-{{message.tags}} my-5" {% endif %}>{{message}}</h3>
+        {% endfor %}
+    {% endif %}
   </div>
 {% endblock main %}
