--- a/don/templates/all-volunteer.html
+++ b/don/templates/all-volunteer.html
@@ -18,16 +18,18 @@
               </tr>
         </thead>
         <tbody>
-            <tr class="text-center">
-                <th>1</th>
-                <td>Nilesh</td>
-                <td>nilesh@gmail.com</td>
-                <td>9090909090</td>
-                <td> 02/02/2022</td>
-                <td>pending</td>
-                <td><a href="{% url 'view_volunteerdetail' 2 %}">View Details</a></td>
-                <td><a href="#">Delete</a></td>
-              </tr>
+          {% for i in volunteer %}
+          <tr class="text-center">
+              <th>{{forloop.counter}}</th>
+              <td>{{i.user.first_name}} {{i.user.last_name}}</td>
+              <td>{{i.user.email}}</td>
+              <td>{{i.contact}}</td>
+              <td>{{i.regdate}}</td>
+              <td>{{i.status}}</td>
+              <td><a href="{% url 'view_volunteerdetail' i.id %}" class="text-primary">View Details</a></td>
+              <td><a href="{% url "delete_volunteer" i.user.id %}" class="text-danger" onclick="return confirm ('Are You Sure?')">Delete</a></td>
+            </tr>
+            {% endfor %}
         </tbody>
     </table>
   </div>
