--- a/don/templates/base-db-admin.html
+++ b/don/templates/base-db-admin.html
@@ -33,8 +33,8 @@
                 <div class="profile_details">
                     <img src="{% static 'images/donation.jpg' %}"  alt="" >
                     <div class="name_job">
-                        <div class="name">Nilesh Borate</div>
-                        <div class="email">nilesh@gmail.com</div>
+                        <div class="name">{{request.user.first_name}} {{request.user.last_name}}</div>
+                        <div class="email">{{request.user.email}}</div>
                     </div>
                 </div>
             </div>
