--- a/don/templates/index-volunteer.html
+++ b/don/templates/index-volunteer.html
@@ -16,7 +16,7 @@
                                     <i class="fa fa-list fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{totalCollectionReq}}</h3>
                                 </div>
                             </div>
                         </div>
@@ -39,7 +39,7 @@
                                     <i class="fa fa-snowflake fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{totalRecDonation}}</h3>
                                 </div>
                             </div>
                         </div>
@@ -64,7 +64,7 @@
                                     <i class="fa fa-arrows fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{totalNotRecDonation}}</h3>
                                 </div>
                             </div>
                         </div>
@@ -89,7 +89,7 @@
                                     <i class="fa fa-exchange fa-3x"></i>
                                 </div>
                                 <div class="col">
-                                    <h3 class="display-3">08</h3>
+                                    <h3 class="display-3">{{totalDonationDelivered}}</h3>
                                 </div>
                             </div>
                         </div>
