--- a/don/templates/manage-area.html
+++ b/don/templates/manage-area.html
@@ -15,13 +15,15 @@
               </tr>
         </thead>
         <tbody>
+          {% for i in area %}
             <tr class="text-center">
-                <th>1</th>
-                <td>Pune</td>
-                <td>02/02/2022</td>
-                <td><a href="{% url 'edit_area' 2 %}">Edit</a></td>
-                <td><a href="#">Delete</a></td>
+                <th>{{forloop.counter}}</th>
+                <td>{{i.areaname}}</td>
+                <td>{{i.creationdate}}</td>
+                <td><a href="{% url 'edit_area' i.id %}" class="text-primary">Edit</a></td>
+                <td><a href="{% url "delete_area" i.id %}" class="text-danger" onclick="return confirm ('Are YOu Sure?')">Delete</a></td>
               </tr>
+              {% endfor %}
         </tbody>
     </table>
   </div>
