--- a/don/templates/profile-volunteer.html
+++ b/don/templates/profile-volunteer.html
@@ -4,6 +4,8 @@
 <div class="container mt-5 vh-100 table-responsive">
     <h3>My Profile</h3>
     <hr>
+    <form action="" method="post" enctype="multipart/form-data" novalidate>
+        {% csrf_token %}
     <div class="row">
       <div class="col-sm-6 p-2">
           <div class="form-group">
@@ -22,7 +24,7 @@
       <div class="col-sm-6 p-2">
           <div class="form-group">
               <label>Email ID</label>
-              <input type="email" name="email" readonly placeholder="Email Address" required class="form-control" value="{{volunteer.user.username}}">
+              <input type="email" name="email" readonly placeholder="Email Address" required class="form-control" value="{{volunteer.user.email}}">
           </div>
       </div>
 
@@ -43,13 +45,13 @@
 
       <div class="col-sm-6 p-2">
           <div class="form-group">
-              <img src = "{% static 'images/avtar1.jpg' %}" width="100" height="100">
+              <img src = "{{volunteer.userpic.url}}" width="100" height="100">
           </div>
       </div>
 
       <div class="col-sm-6 p-2">
           <div class="form-group">
-              <img src = "{% static 'images/avtar3.png' %}" width="100" height="100">
+              <img src = "{{volunteer.idpic.url}}" width="100" height="100">
           </div>
       </div>
 
@@ -77,7 +79,19 @@
 
 
   
-  <input type="submit" value="Submit" class="m-2 px-3 btn btn-primary">
+  <input type="submit" value="Update" class="m-2 px-3 btn btn-primary">
+  {% if form.non_field_errors %}
+{% for error in form.non_field_errors %}
+<p class="alert alert-danger my-3">{{error}}</p>
+{% endfor %}
+{% endif %}
+
 </div>
-  </div>
+</form>
+{% if messages %}
+    {% for message in messages %}
+        <h3 {% if message.tag %} class="alert alert-{{message.tags}} my-5" {% endif %}>{{message}}</h3>
+    {% endfor %}
+{% endif %}
+</div>
 {% endblock main %}
