--- a/don/templates/manage-area.html
+++ b/don/templates/manage-area.html
@@ -21,7 +21,7 @@
                 <td>{{i.areaname}}</td>
                 <td>{{i.creationdate}}</td>
                 <td><a href="{% url 'edit_area' i.id %}" class="text-primary">Edit</a></td>
-                <td><a href="{% url "delete_area" i.id %}" class="text-danger" onclick="return confirm ('Are YOu Sure?')">Delete</a></td>
+                <td><a href="{% url "delete_area" i.id %}" class="text-danger" onclick="return confirm ('Are You Sure?')">Delete</a></td>
               </tr>
               {% endfor %}
         </tbody>
