--- a/don/templates/view-donationdetail.html
+++ b/don/templates/view-donationdetail.html
@@ -11,15 +11,15 @@
           </tr>
           <tr class="align-middle text-center">
             <td><h5>Donor Name</h5></td>
-            <td><h5 class="text-secondary">Nilesh Borate</h5></td>
+            <td><h5 class="text-secondary">{{donation.donor.user.first_name}} {{donation.donor.user.last_name}}</h5></td>
             <td><h5>Donor Contact</h5></td>
-            <td><h5 class="text-secondary">9000000000</h5></td>
+            <td><h5 class="text-secondary">"{{donation.donor.contact}}"</h5></td>
         </tr>
           <tr class="align-middle text-center">
               <td><h5>Email</h5></td>
-              <td><h5 class="text-secondary">nilesh@gmail.com</h5></td>
+              <td><h5 class="text-secondary">{{donation.donor.user.email}}</h5></td>
               <td><h5>Donor Pic</h5></td>
-            <td><img src="{% static 'images/cloth-donation.jfif' %}" width="80" height="80" /></td>
+            <td><img src="{{donation.donor.userpic.url}}" width="80" height="80" /></td>
           </tr>
           
         
@@ -28,22 +28,25 @@
         </tr>
         <tr class="align-middle text-center">
           <td><h5>Donation Name</h5></td>
-          <td><h5 class="text-secondary">Nilesh Borate</h5></td>
+          <td><h5 class="text-secondary">{{donation.donationname}}</h5></td>
           <td><h5>Donation Pic</h5></td>
-          <td><img src="{% static 'images/cloth-donation.jfif' %}" width="80" height="80" /></td>
+          <td><img src="{{donation.donationpic.url}}" width="80" height="80" /></td>
       </tr>
       <tr class="align-middle text-center">
         <td><h5 >Collection Location</h5></td>
-        <td><h5 class="text-secondary">Bhosari Pune</h5></td>
+        <td><h5 class="text-secondary">{{donation.collectionloc}}</h5></td>
         <td><h5 >Donation Date</h5></td>
-        <td><h5 class="text-secondary">20/02/2022</h5></td>
+        <td><h5 class="text-secondary">{{donation.donationdate}}</h5></td>
     </tr>
+    {% if donation.status == 'pending' %}{% endif %}
+     <form method="post">
+      {% csrf_token %}
     <tr class="align-middle text-center">
       <td><h5 >Status</h5></td>
       <td colspan="3">
         <select class="form-control" name="status" required>
-          <option value="1">Accept</option>
-          <option value="2">Reject</option>
+          <option value="accept">Accept</option>
+          <option value="reject">Reject</option>
         </select>
       </td>
     </tr>
@@ -52,29 +55,31 @@
         <tr class="align-middle text-center">
           <td><h5 >Admin Remark</h5></td>
           <td colspan="3">
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea class="form-control" name="adminremark" id="exampleFormControlTextarea1" rows="3"></textarea>
           </td>
         </tr>
 
           <tr class="align-middle text-center">
             <td></td>
             <td colspan="3">
-                <button type="button" class="btn btn-primary px-5">Update</button>
+                <input type="submit" value="Update" class="btn btn-primary px-5">Update</button>
           </td>
         </tr>
+      </form>
+      {% else %} 
         <tr class="align-middle text-center">
           <td><h5>Status</h5></td>
-          <td><h5 class="text-secondary text-capitalize">Accept</h5></td>
+          <td><h5 class="text-secondary text-capitalize">{{donation.status}}</h5></td>
           <td><h5 >Updation Date</h5></td>
-          <td><h5 class="text-secondary">20/02/2022</h5></td>
+          <td><h5 class="text-secondary">{{donation.updationdate}}</h5></td>
       </tr>
       <tr class="align-middle text-center">
         <td><h5 >Admin Remark</h5></td>
         <td colspan="3">
-          <h5 class="text-secondary">Accepted</h5>
+          <h5 class="text-secondary">{{donation.adminremark}}</h5>
         </td>
       </tr>
-         
+        {% endif %}
           
           
       </tbody>
