--- a/don/templates/view-donordetail.html
+++ b/don/templates/view-donordetail.html
@@ -11,20 +11,20 @@
           </tr>
           <tr class="align-middle text-center">
             <td><h5>Donor Name</h5></td>
-            <td><h5 class="text-secondary">Nilesh Borate</h5></td>
+            <td><h5 class="text-secondary">{{donor.user.first_name}} {{donor.user.last_name}}</h5></td>
             <td><h5>Donor Contact</h5></td>
-            <td><h5 class="text-secondary">9000000000</h5></td>
+            <td><h5 class="text-secondary">{{donor.contact}}</h5></td>
         </tr>
           <tr class="align-middle text-center">
               <td><h5>Email</h5></td>
-              <td><h5 class="text-secondary">nilesh@gmail.com</h5></td>
+              <td><h5 class="text-secondary">{{donor.user.email}}</h5></td>
               <td><h5>Donor Pic</h5></td>
-            <td><img src="{% static 'images/cloth-donation.jfif' %}" width="80" height="80" /></td>
+            <td><img src="{{donor.userpic.url}}" width="80" height="80" /></td>
           </tr>
         
         <tr align="center">
           <td colspan="4" style="font-size:20px;color:red">
-              <a href="#" onclick="return confirm('Are You Sure?')" class="text-primary">Delete</a>
+              <a href="{% url "delete_donor" donor.user.id %}" onclick="return confirm('Are You Sure?')" class="text-primary">Delete</a>
           </td>
         </tr>
 
